# GPIS-Grasp-DynObject-Reconstruction

grasp_recon/: CMakeLists.txt  CMakeLists.txt~  baxter2.urdf  package.xml  package.xml~
grasp_recon/launch/: lbr4_ik_server.launch  lbr4_ik_server.launch~
grasp_recon/scripts/: camera_tfpub.py  client_move_obj_plot.py  exe_tra.py  grasp_client.py  grasp_client_2.py  grasp_client_move_obj.py  grasp_client_move_obj_info.py  grasp_client_prm.py  grasp_realease_lift_off.py  joint_trajectory.py  ray_caster.py  save_code.py  test.py  test.py~  test_2.py  test_3.py  test_4.py  test_5.py  test_numpy.py  test_publish_tf.py  tf_test.py  trajectory_pub.py  transform_pcl.py  vis_robot.py  vis_training_trja.py
grasp_recon/src/: handArmModel_baxter.py  handArmModel_baxter_left.py  interpolate_traj.py  kdl_baxter.py  kdl_baxter_entropy_plot.py  kdl_baxter_hand_model.py  kdl_baxter_info_gain.py  kdl_baxter_info_gain_one.py  manipulator_model_2.py  manipulator_model_left.py  octree_accurate.cpp  octree_search.cpp  octree_search_2.cpp  octree_search_2.cpp~  pyOpt_cost_function.py  pyOpt_cost_function_collision.py  pyOpt_cost_function_info_gain.py  test_kdl.py
grasp_recon/src/ik_planner/: compute_ik_baxter_grasp.py  compute_ik_baxter_lift_off.py  compute_ik_baxter_mov_obj.py  compute_ik_baxter_mov_obj_info.py  compute_ik_baxter_prm.py  cost_final_grasp.py  cost_final_grasp_sdf.py  cost_ik_baxter_grasp.py  cost_info_gain.py  cost_palm_collision.py  cost_palm_collision_as_contraint.py  cost_table_collision_as_contraint.py  ik_plan.py  pyOpt_lbr4_vel_constraint.py  pyOpt_wrapper.py  pyOpt_wrapper_collision.py  traj_opt.py  traj_opt_collision.py
grasp_recon/srv/: GPIS.srv~  IKJointTrajectory.srv  raycast.srv  raycast.srv~
grasp_recon/temp/: CMakeLists.txt  basic_shapes.cpp  octree_search.cpp  package.xml  test_entro.py
