<?xml version="1.0"?>
<package>
  <name>octree_search</name>
  <version>0.0.0</version>
  <description>This package perform segmentation of a table and the objects on top from depth camera data</description>
  <maintainer email="hunter.lb@mail.com">hunter</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <export>

  </export>
</package>
